Update branchName to be passed as query param (#338)
